# facecam

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
models/alignment_syan_fnn/: AN02.pb
models/detect_haarcascade/: T02_27.xml  haarcascade_v1.xml
models/detect_lbfcascade/: lbf_fact_detect_6.xml
qimgv/: CMakeLists.txt  main.cpp
src/: face_detector.cpp  face_detector_haarcascade.cpp  face_detector_ssd_resnet10.cpp  file_storage.cpp  file_storage.h  filesystem_include.h  landmark_result.cpp  landmark_result.h  main.cpp  mainwindow.h  mainwindow.ui  timer.h  utility.cpp  utility.h
src/effects/: animation.cpp  animation.h  effect_cloud.cpp  effect_cloud.h  effect_debug_info.cpp  effect_debug_info.h  effect_feather_hat.cpp  effect_feather_hat.h  effect_pink_glasses.cpp  effect_pink_glasses.h  effect_rabbit_ears.cpp  effect_rabbit_ears.h  effect_tiger.cpp  effect_tiger.h  image_effect.cpp  image_effect.h
src/face_detector/: face_detector.h  face_detector_cascade.cpp  face_detector_cascade.h  face_detector_haarcascade.cpp  face_detector_haarcascade.h  face_detector_ssd_resnet10.cpp  face_detector_ssd_resnet10.h
src/face_landmark_detector/: face_landmark_detector.cpp  face_landmark_detector.h  face_landmark_detector_kazemi.cpp  face_landmark_detector_kazemi.h  face_landmark_detector_lbf.cpp  face_landmark_detector_lbf.h  face_landmark_detector_syan_cnn.cpp  face_landmark_detector_syan_cnn.h  face_landmark_detector_syan_cnn_2.cpp  face_landmark_detector_syan_cnn_2.h  face_landmark_detector_syan_fnn.cpp  face_landmark_detector_syan_fnn.h
src/gui/: framelesswindow.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/framelesswindow/: framelesswindow.cpp  framelesswindow.ui
